--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -40,3 +40,13 @@
     opacity: 0.5;
   }
 }
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  --primary: #dcc38b;
+}
+html {
+  scroll-behavior: smooth;
+}
