--- a/app/[lang]/components/BaseInputs/index.module.scss
+++ b/app/[lang]/components/BaseInputs/index.module.scss
@@ -23,7 +23,24 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  height: 38px !important;
+  height: 40px;
+
+  border: 1px solid #f1f1f1;
+  border-radius: 12px;
+  display: block;
+  width: 100%;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: #495057;
+  background-image: none;
+  background-clip: padding-box;
+
+  ::placeholder {
+    font-weight: 300;
+  }
+
+  outline: none;
 }
 
 .close {
