--- a/app/[lang]/components/BaseInputs/index.module.scss
+++ b/app/[lang]/components/BaseInputs/index.module.scss
@@ -50,3 +50,58 @@
   z-index: 10;
   transform: translateY(-50%);
 }
+
+.radio {
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+  user-select: none;
+  text-align: left;
+  & + .radio {
+    margin-top: 12px;
+  }
+  input {
+    display: none;
+    & + span {
+      display: inline-block;
+      position: relative;
+      padding-left: 30px;
+      &:before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        border-radius: 50%;
+        margin-right: 5px;
+        width: 20px;
+        height: 20px;
+        border: 3px solid #bea087;
+        background: #fff;
+      }
+
+      &:after {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 10px;
+        background: #dcc38b;
+
+        position: absolute;
+
+        border-radius: 50%;
+        top: 4.5px;
+        left: 4.5px;
+        opacity: 0;
+        transform: scale(0, 0);
+        transition: all 0.2s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+      }
+    }
+    &:checked + span:after {
+      opacity: 1;
+      transform: scale(1, 1);
+    }
+  }
+}
