--- a/app/[lang]/components/BaseInputs/index.module.scss
+++ b/app/[lang]/components/BaseInputs/index.module.scss
@@ -23,7 +23,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  height: 40px;
+  height: 50px;
+
+  @media (max-width: 1200px) {
+    height: 40px;
+  }
 
   border: 1px solid #f1f1f1;
   border-radius: 12px;
